Update page title and headings

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darkmode & Modern UI Example</title>
+    <title>Freetsrap Example</title>
     <link rel="stylesheet" href="freetsrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
 <body data-theme="dark">
     <div class="container">
         <aside class="sidebar">
-            <h1>Darkmode & Modern UI Example</h1>
+            <h1>Freetsrap Example</h1>
             <nav>
                 <ul>
                     <li><i class="fas fa-home"></i> <a href="#">Home</a></li>
@@ -22,7 +22,7 @@
             </nav>
         </aside>
         <main class="content">
-            <h1>Darkmode & Modern UI Example</h1>
+            <h1>Freetsrap Example</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officiis mollitia
                 consequuntur accusantium maiores nobis vero laudantium voluptatibus, nulla, error iusto voluptatem optio
